[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/player/footstep_01.png" type="Texture" id=1]
[ext_resource path="res://objects/player/Poop.gd" type="Script" id=2]
[ext_resource path="res://sound/fart_01.wav" type="AudioStream" id=3]
[ext_resource path="res://objects/player/footstep_02.png" type="Texture" id=4]
[ext_resource path="res://objects/player/footstep_03.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )
random_pitch = 1.5

[node name="Poop" type="Area2D"]
script = ExtResource( 2 )
footstepSprites = [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 1 )

[node name="FartAudio" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Poop_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Poop_body_exited"]
